Fix clipping of covers in grid view. Closes #1012

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -843,8 +843,7 @@ div.v-subheader {
  object-fit:cover;
  object-position:50% 0%;
  display:block;
- margin-bottom:4px;
- padding-top:2px;
+ margin-bottom:5px;
  height:calc((var(--min-grid-width) - 5px) + (5px * var(--image-grid-factor))) !important;
  width:calc((var(--min-grid-width) - 5px) + (5px * var(--image-grid-factor))) !important;
 }
@@ -895,7 +894,7 @@ div.v-subheader {
 
 .image-grid-item {
  position:relative;
- padding:0px;
+ padding:2px 0px 0px 0px;
  background-color:transparent !important;
  cursor:pointer;
  width:calc(var(--min-grid-width) + (5px * var(--image-grid-factor))) !important;
@@ -912,12 +911,12 @@ div.v-subheader {
 
 .image-grid-btn, .image-grid-btn:hover {
  position:absolute;
- bottom:calc(11px - var(--grid-menu-offset)) !important;
+ bottom:calc(9px - var(--grid-menu-offset)) !important;
  right:-10px !important;
 }
 
 .image-grid-with-sub .image-grid-btn, .image-grid-with-sub .image-grid-btn:hover {
- bottom:calc(27px - var(--grid-menu-offset)) !important;
+ bottom:calc(25px - var(--grid-menu-offset)) !important;
 }
 
 .grid-no-subtitle {
